--- a/render.yaml
+++ b/render.yaml
@@ -27,11 +27,15 @@ services:
       - path: /*
         name: Permissions-Policy
         value: geolocation=(), microphone=(), camera=(), payment=(), usb=()
-      - path: /*
-        name: Content-Security-Policy
-        value: default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://www.googletagmanager.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'
+      # Temporarily disabled CSP for debugging
+      # - path: /*
+      #   name: Content-Security-Policy
+      #   value: default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://www.googletagmanager.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'
 
       # Cache Headers
+      - path: /_astro/*
+        name: Cache-Control
+        value: public, max-age=31536000, immutable
       - path: /assets/*
         name: Cache-Control
         value: public, max-age=31536000, immutable
