--- a/render.yaml
+++ b/render.yaml
@@ -1,62 +1,9 @@
 services:
   - type: web
     name: portfolio-686f6c61
-    env: static
+    env: node
     buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
+    startCommand: npx serve dist -l 10000
     envVars:
       - key: NODE_VERSION
         value: 18
-    headers:
-      # Security Headers
-      - path: /*
-        name: X-Frame-Options
-        value: DENY
-      - path: /*
-        name: X-Content-Type-Options
-        value: nosniff
-      - path: /*
-        name: X-XSS-Protection
-        value: 1; mode=block
-      - path: /*
-        name: Referrer-Policy
-        value: strict-origin-when-cross-origin
-      - path: /*
-        name: Strict-Transport-Security
-        value: max-age=31536000; includeSubDomains; preload
-      - path: /*
-        name: Permissions-Policy
-        value: geolocation=(), microphone=(), camera=(), payment=(), usb=()
-      # Temporarily disabled CSP for debugging
-      # - path: /*
-      #   name: Content-Security-Policy
-      #   value: default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://www.googletagmanager.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'
-
-      # Cache Headers
-      - path: /_astro/*
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
-      - path: /assets/*
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
-      - path: /*.css
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
-      - path: /*.js
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
-      - path: /*.png
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
-      - path: /*.jpg
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
-      - path: /*.webp
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
-      - path: /*.svg
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
-      - path: /sitemap.xml
-        name: Cache-Control
-        value: public, max-age=3600
